# learning

./: README.md  check.py  pyproject.toml  setup.py  storage.py  utils.py
core/: _util.py
glance/: constants.py  patch_yaml.py  pyproject.toml  report.py  setup.py  webserver.py
glance/core/: __init__.py
glance/glance_web/: app.py
glance/glance_web/bpui/: __init__.py
glance/glance_web/bpui/static/css/: byuikit.standalone.css
glance/glance_web/bpui/static/js/: bokeh_plotresult_height_fix.js  glance_filter.js  iframeResizer.contentWindow.min.js
glance/glance_web/bpui/templates/: base.html  index.html  result_tableresult.html
glance_plugins/: plot_with_x.py  pyproject.toml  setup.py  text_download.py
glance_plugins/templates/: result_plotwithxresult.html  result_textdownloadresult.html
glance_web/: pyproject.toml  setup.py
glance_web/bpapi/: __init__.py
glance_web/bpui/static/css/: glance.css
glance_web/bpui/static/js/: byuikit.standalone.js
glance_web/bpui/templates/: block_macro.html  navbar_macro.html
web/: __init__.py  _compat.py  _utils.py  api.py  bpprometheus.py
web/bpui/static/css/: byuikit.standalone.min.css  sidebar.css
web/bpui/static/js/: byuikit.standalone.min.js  collapsable_toggle_button.js  sidebar_navigation.js
web/bpui/templates/: report_page.html  result_imageresult.html  result_plotresult.html  result_staticresult.html  result_textresult.html  result_vegachart.html
