# pyproject.toml

[tool.poetry]
name = "learning"
version = "0.1.0"
description = "Learning project"
authors = ["Mariia Levytska <mariia.levytska@mail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add any other dependencies as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
