pyproject.toml files inside # glance_web/pyproject.toml

[package]
name = "glance_web"
version = "0.10.4"
description = "glance_web package"

[tool.poetry]
python = "^3.8"

[tool.poetry.dependencies]
blinker = "^1.4"
bokeh = "^2.4.2"
cachetools = "^4.2.4"
click = "^7.1.2"
debtcollector = "^2.2.0"
Flask = "^1.1.4"
Flask-Caching = "^1.11.1"
Flask-Compress = "^1.4.0"
Flask-Markdown = "^0.3"
glance = "^0.13.0"
Markdown = "^2.6.11"
numpy = "^1.22.4"
pandas = "^1.4.1"
prometheus-client = "^0.14.1"
python-magic = "^0.4.24"
PyYAML = "^6.0"
setuptools = "^59.5.0"
simplekv = "^0.14.1"
six = "^1.16.0"
storefact = "^0.10.0"
tornado = "^6.1"
typing-extensions = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"